@@ -1,3 +1,11 @@
+2008-02-24  Olav Vitters  <olav@bkor.dhs.org>
+
+	* applets/clock/set-timezone-dummy.c: Add set_system_timezone_async,
+	needed when compiling without polkit.
+
+	Fix bug #517685.
+	Patch by Frederic Peters.
+
 2008-02-11  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.21.92.
